--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -22,6 +22,10 @@ CHANGES
 
   Fixes https://github.com/morepath/morepath/issues/283
 
+- Modify ``setup.py`` to use ``io.open`` instead of ``open`` to
+  include the README and the CHANGELOG and hardcode UTF-8 so it works
+  on all versions of Python with all default encodings.
+
 0.9 (2014-11-25)
 ================
 
