--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -26,6 +26,9 @@ CHANGES
 
 - Better ``ConfligError`` reporting when ``setting_section`` is in use.
 
+- Removed the unused ``request`` parameter from the ``link`` method in
+  ``morepath.request``. See issue #351.
+
 0.11.1 (2015-06-29)
 ===================
 
