Document class_link.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,8 +4,12 @@ CHANGES
 0.13 (unreleased)
 =================
 
-- Nothing changed yet.
-
+- Add `request.class_link`. This lets you link using classes instead
+  of instances as an optimization. In some cases instantiating an
+  object just so you can generate a link to it is relatively
+  expensive. In that case you can use `request.class_link`
+  instead. This lets you link to a model class and supply a
+  `variables` dictionary manually.
 
 0.12 (2016-01-27)
 =================
