Update changes a little.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -185,9 +185,9 @@ CHANGES
 - **Breaking change** You cannot use a Morepath ``path`` directive on
   a ``@classmethod`` anymore.
 
-- **Breaking change**. If you use settings, you need to replace any
-  references to ``app.registry.settings`` to
-  ``app.settings``..
+- **Breaking change**. Brought `app.settings` back, a shortcut to the
+  settings registry. If you use settings, you need to replace any
+  references to ``app.registry.settings`` to ``app.settings``.
 
 - Add `request.class_link`. This lets you link using classes instead
   of instances as an optimization. In some cases instantiating an
@@ -195,8 +195,6 @@ CHANGES
   expensive. In that case you can use `request.class_link`
   instead. This lets you link to a model class and supply a
   `variables` dictionary manually.
-
-- Brought `app.settings` back, a shortcut to the settings registry.
 
 - **Breaking change**. In Morepath versions before this there was an
   class attribute on ``App`` subclasses called ``registry``. This was
