--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -19,6 +19,9 @@ CHANGES
 
 - Refactor creation of tweens into function on TweenRegistry.
 
+- Update the REST document; it was rather old and made no mention of
+  ``body_model``.
+
 0.13 (2016-04-06)
 =================
 
