--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,11 +1,12 @@
 CHANGES
 *******
 
-0.14 (unreleased)
-=================
+0.13.2 (unreleased)
+===================
 
-- Nothing changed yet.
-
+- Undid change in 0.13.1 where ``App`` could not be instantiated if
+  not committed, as ran into real-world code where this assumption
+  was broken.
 
 0.13.1 (2016-04-13)
 ===================
