--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 CHANGES
 *******
 
+0.13.3 (unreleased)
+===================
+
+- Nothing changed yet.
+
+
 0.13.2 (2016-04-13)
 ===================
 
