Refactoring: invert order of request, obj to obj, request internally as that fits the way views work more. Reg hasn't enforced this argument order for a long time already.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,8 +4,7 @@ CHANGES
 0.14 (unreleased)
 ===================
 
-- Nothing changed yet.
-
+- Refactor internals of publishing/view engine.
 
 0.13.2 (2016-04-13)
 ===================
