--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -151,11 +151,10 @@ CHANGES
   Again you need to be explicit and use ``morepath.commit`` to commit
   those apps you want to test.
 
-  If you had a low-level reference to ``app.registry`` in your code
-  you now need to change this to ``app.config.registry``. Expect more
-  changes to this in future versions -- thanks to the dectate library
-  we can now start breaking up the big registry into multiple
-  independent ones all stored under ``app.config``.
+  If you had a low-level reference to ``app.registry`` in your code it
+  will break; the registry has been split up and is now under
+  `app.config``. If you want access to ``lookup`` you can use
+  ``app.lookup``.
 
   If you created custom directives, the way to create directives
   is now documented as part of the dectate_ project. The main updates you
@@ -219,7 +218,14 @@ CHANGES
         ....
 
 - **Breaking change** You cannot use a Morepath ``path`` directive on
-  a ``@classmethod`` anymore.
+  a ``@classmethod`` directly anymore. Instead you can do this::
+
+    class Foo(object):
+        @classmethod
+        def get_something():
+            pass
+
+    @App.path('/', model=Something)(Foo.get_something)
 
 - **Breaking change**. Brought `app.settings` back, a shortcut to the
   settings registry. If you use settings, you need to replace any
