--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -13,15 +13,16 @@ CHANGES
   effectively for view lookup, order of some parameters is reversed
   for consistency with public APIs.
 
-- Document a few missing of the public API: ``enable_implicit``,
+- Document the internals of Morepath, see implementation document.
+
+- Document a few missing parts of the public API: ``enable_implicit``,
   ``disable_implicit``, ``remember_identity``, ``forget_identity``,
   ``Identity``, ``NO_IDENTITY``.
 
 - The framehack module was merged into ``autosetup``.
 
-- Documented the internals of Morepath, see implementation document.
-
-- Document Morepath's cookiecutter template.
+- New cookiecutter template for Morepath, and added references in the
+  documentation for it.
 
   See https://github.com/morepath/morepath-cookiecutter
 
