--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -15,9 +15,12 @@ CHANGES
 
 - Document the internals of Morepath, see implementation document.
 
-- Document a few missing parts of the public API: ``enable_implicit``,
+- Move a few things into the public API: ``enable_implicit``,
   ``disable_implicit``, ``remember_identity``, ``forget_identity``,
-  ``Identity``, ``NO_IDENTITY``.
+  ``Identity``, ``IdentityPolicy``, ``NO_IDENTITY``. Some of these
+  were already documented as importable from ``morepath.security``.
+  though importing from ``morepath.security`` won't break, you should
+  stop importing from it and import from ``morepath`` instead.
 
 - The framehack module was merged into ``autosetup``.
 
