--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -59,6 +59,9 @@ CHANGES
 - Add a test that verifies we can instantiate an app before configuration
   is done. See issue #378 for discussion.
 
+- Automatic commit of the app is done during the first request if the
+  app wasn't committed previously. See issue #392.
+
 0.13.2 (2016-04-13)
 ===================
 
