--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,14 @@ CHANGES
 0.14 (unreleased)
 ===================
 
+- **New** We have a new chat channel available. You can join us by clicking
+  this link:
+
+  https://discord.gg/0xRQrJnOPiRsEANa
+
+  Please join and hang out! We are retiring the (empty) Freenode
+  #morepath channel.
+
 - **Breaking change**: Move the basic auth policy to
   ``more.basicauth`` extension extension. Basic auth is just one of
   the authentication choices you have and not the default. To update
@@ -15,13 +23,18 @@ CHANGES
   If you try to catch them in your code, just remove the whole
   ``except`` statement as they were never raised.
 
-- **Deprecated** We moved a few things into the public API:
-  ``enable_implicit``, ``disable_implicit``, ``remember_identity``,
-  ``forget_identity``, ``Identity``, ``IdentityPolicy``,
-  ``NO_IDENTITY``. Some of these were already documented as importable
-  from ``morepath.security``.  Although importing from
-  ``morepath.security`` won't break yet, you should stop importing
-  from it and import directly from ``morepath`` instead.
+- **Deprecated** Importing from ``morepath.security`` directly. We
+  moved a few things from it into the public API: ``enable_implicit``,
+  ``disable_implicit``, ``remember_identity``, ``forget_identity``,
+  ``Identity``, ``IdentityPolicy``, ``NO_IDENTITY``. Some of these
+  were already documented as importable from ``morepath.security``.
+  Although importing from ``morepath.security`` won't break yet, you
+  should stop importing from it and import directly from ``morepath``
+  instead.
+
+- **Deprecated** ``morepath.autosetup`` and ``morepath.autocommit``
+  are both deprecated. Use the new explicit ``App.commit`` method, or
+  rely on Morepath automatically committing during the first request.
 
 - **Breaking change** Extensions that imported ``RegRegistry`` directly
   from ``morepath.app`` are going to be broken. This kind of import::
@@ -40,14 +53,6 @@ CHANGES
   the past it was possible to define a ``variables`` function that
   took no arguments. This is now an error.
 
-- **New** We have a new chat channel available. You can join us by clicking
-  this link:
-
-  https://discord.gg/0xRQrJnOPiRsEANa
-
-  Please join and hang out! We are retiring the (empty) Freenode
-  #morepath channel.
-
 - Introduce a new ``commit`` method on ``App`` that commits the App
   and also recursively commits all mounted apps. This is more explicit
   than ``autocommit`` and less verbose than using the lower-level
@@ -56,8 +61,9 @@ CHANGES
 - Automatic commit of the app is done during the first request if the
   app wasn't committed previously. See issue #392.
 
-- Introduce a deprecation warnings (for ``morepath.security``) and
-  document how a user can deal with such warnings.
+- Introduce a deprecation warnings (for ``morepath.security``,
+  ``morepath.autosetup``) and document how a user can deal with such
+  warnings.
 
 - Adds host header validation to protect against header poisoning attacks.
 
@@ -94,10 +100,11 @@ CHANGES
   ``reg.Registry``.  This wasn't causing bugs but made debugging
   harder.
 
-- Introduce a new ``defer_class_links`` directive that lets you defer
-  link generation using ``Request.class_link()`` in addition to
-  ``Request.link()``.  This is an alternative to ``defer_links``,
-  which cannot support ``Request.class_link``.
+- Refactored link generation. Introduce a new ``defer_class_links``
+  directive that lets you defer link generation using
+  ``Request.class_link()`` in addition to ``Request.link()``. This is
+  an alternative to ``defer_links``, which cannot support
+  ``Request.class_link``.
 
 - Morepath now has extension API docs that are useful when you want to
   create your own directive and build on one of Morepath's registries
