--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -30,6 +30,28 @@ CHANGES
 
     from morepath import NO_IDENTITY
 
+- **Deprecated** ``morepath.remember_identity`` and
+  ``morepath.forget_identity`` are both deprecated.
+
+  Use the ``morepath.App.remember_identity`` and
+  ``morepath.App.forget_identity``, respectively.
+
+  Instead of ::
+
+    remember_identity(response, request, identity, lookup=request.lookup)
+    ...
+    morepath.forget_identity(response, request, lookup=request.lookup)
+
+  you do::
+
+    request.app.remember_identity(response, request, identity)
+    ...
+    request.app.forget_identity(response, request)
+
+- **Deprecated** ``morepath.settings`` is deprecated.
+
+  Use the ``morepath.App.settings`` property instead.
+
 - Cleanups and testing of ``reify`` functionality.
 
 - More doctests in the narrative documentation.
